# ChessEngine

./: .gitignore  CMakeLists.txt  README.md
docs/: 01-FEN.md  02-Move-Encoding.md
include/: AttackDetector.h  AttackTables.h  Bitboard.h  Board.h  Evaluation.h  Move.h  MoveGenerator.h  MoveList.h  Perft.h  Search.h  Types.h
src/: AttackDetector.cpp  AttackTables.cpp  Bitboard.cpp  Board.cpp  Evaluation.cpp  Move.cpp  MoveGenerator.cpp  MoveList.cpp  Perft.cpp  Search.cpp  main.cpp
